--- a/pages/index.css
+++ b/pages/index.css
@@ -42,7 +42,3 @@ h1 {
   float: right;
   vertical-align: middle;
 }
-
-.gridTop {
-  width: 100px;
-}
